--- a/nicepage.css
+++ b/nicepage.css
@@ -34635,13 +34635,16 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-image-1 {
-    width: 61px;
-    height: 60px;
-    margin-right: 11px;
+    width: 47px;
+    height: 48px;
+    margin-top: 14px;
+    margin-right: 46px;
   }
 
   .u-header .u-menu-1 {
-    margin-right: -26px;
+    margin-top: -42px;
+    margin-right: 10px;
+    margin-bottom: 20px;
   }
 }
 @media (max-width: 767px) {
@@ -34652,11 +34655,14 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-header .u-image-1 {
     width: 40px;
     height: 47px;
-    margin-right: 11px;
+    margin-top: 5px;
+    margin-right: 39px;
   }
 
   .u-header .u-menu-1 {
-    margin-right: -26px;
+    margin-top: -41px;
+    margin-right: 0;
+    margin-bottom: 10px;
   }
 }
 @media (max-width: 575px) {
@@ -34665,14 +34671,15 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-image-1 {
-    width: 33px;
+    width: 32px;
     height: 35px;
-    margin-top: 3px;
+    margin-top: 8px;
+    margin-right: 33px;
   }
 
   .u-header .u-menu-1 {
     margin-top: -35px;
-    margin-bottom: 10px;
+    margin-bottom: 7px;
   }
 }
 .u-footer {
