--- a/うち.css
+++ b/うち.css
@@ -8,6 +8,7 @@
 
 .u-section-2-1 .u-text-1 {
   font-weight: 700;
+  font-size: 2.25rem;
   margin: 31px auto 0;
 }
 
@@ -39,10 +40,6 @@
 @media (max-width: 1199px) {
   .u-section-2-1 .u-sheet-1 {
     min-height: 785px;
-  }
-
-  .u-section-2-1 .u-text-1 {
-    font-size: 2.25rem;
   }
 
   .u-section-2-1 .u-video-1 {
@@ -101,6 +98,7 @@
 }
 
 .u-section-2-2 .u-text-1 {
+  font-size: 2.25rem;
   margin: 31px auto 0;
 }
 
@@ -132,10 +130,6 @@
 @media (max-width: 1199px) {
   .u-section-2-2 .u-sheet-1 {
     min-height: 785px;
-  }
-
-  .u-section-2-2 .u-text-1 {
-    font-size: 2.25rem;
   }
 
   .u-section-2-2 .u-video-1 {
@@ -193,6 +187,7 @@
 
 .u-section-2-3 .u-text-1 {
   font-weight: 700;
+  font-size: 2.25rem;
   margin: 31px auto 0;
 }
 
@@ -224,10 +219,6 @@
 @media (max-width: 1199px) {
   .u-section-2-3 .u-sheet-1 {
     min-height: 785px;
-  }
-
-  .u-section-2-3 .u-text-1 {
-    font-size: 2.25rem;
   }
 
   .u-section-2-3 .u-video-1 {
@@ -285,6 +276,7 @@
 
 .u-section-2-4 .u-text-1 {
   font-weight: 700;
+  font-size: 2.25rem;
   margin: 31px auto 0;
 }
 
@@ -316,10 +308,6 @@
 @media (max-width: 1199px) {
   .u-section-2-4 .u-sheet-1 {
     min-height: 785px;
-  }
-
-  .u-section-2-4 .u-text-1 {
-    font-size: 2.25rem;
   }
 
   .u-section-2-4 .u-video-1 {
@@ -377,6 +365,7 @@
 
 .u-section-2-5 .u-text-1 {
   font-weight: 700;
+  font-size: 2.25rem;
   margin: 31px auto 0;
 }
 
@@ -408,10 +397,6 @@
 @media (max-width: 1199px) {
   .u-section-2-5 .u-sheet-1 {
     min-height: 785px;
-  }
-
-  .u-section-2-5 .u-text-1 {
-    font-size: 2.25rem;
   }
 
   .u-section-2-5 .u-video-1 {
@@ -471,6 +456,7 @@
 
 .u-section-2-6 .u-text-1 {
   font-weight: 700;
+  font-size: 2.25rem;
   margin: 31px auto 0;
 }
 
@@ -502,10 +488,6 @@
 @media (max-width: 1199px) {
   .u-section-2-6 .u-sheet-1 {
     min-height: 785px;
-  }
-
-  .u-section-2-6 .u-text-1 {
-    font-size: 2.25rem;
   }
 
   .u-section-2-6 .u-video-1 {
@@ -563,6 +545,7 @@
 
 .u-section-2-7 .u-text-1 {
   font-weight: 700;
+  font-size: 2.25rem;
   margin: 31px auto 0;
 }
 
@@ -594,10 +577,6 @@
 @media (max-width: 1199px) {
   .u-section-2-7 .u-sheet-1 {
     min-height: 785px;
-  }
-
-  .u-section-2-7 .u-text-1 {
-    font-size: 2.25rem;
   }
 
   .u-section-2-7 .u-video-1 {
@@ -659,6 +638,7 @@
 
 .u-section-2-8 .u-text-1 {
   font-weight: 700;
+  font-size: 2.25rem;
   margin: 31px auto 0;
 }
 
@@ -690,10 +670,6 @@
 @media (max-width: 1199px) {
   .u-section-2-8 .u-sheet-1 {
     min-height: 785px;
-  }
-
-  .u-section-2-8 .u-text-1 {
-    font-size: 2.25rem;
   }
 
   .u-section-2-8 .u-video-1 {
@@ -970,6 +946,10 @@
 
 .u-section-3 .embed-responsive-1 {
   position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
 }
 
 .u-section-3 .u-video-2 {
@@ -985,10 +965,6 @@
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
     min-height: 1250px;
-  }
-
-  .u-section-3 .u-layout-wrap-1 {
-    min-height: 386px;
   }
 
   .u-section-3 .u-image-1 {
@@ -1060,10 +1036,6 @@
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
     min-height: 651px;
-  }
-
-  .u-section-3 .u-layout-wrap-1 {
-    min-height: 574px;
   }
 
   .u-section-3 .u-image-1 {
